# trogue

./: .gitignore  AGENTS.md  CHANGELOG.md  TODO.md  bitmask_and_autotile.md
doc/: Attributes _and_Grouth.md  Attributes_and_Grouth.md  Todo.docx  selfplan.md  worldmap.drawio
doc/SkillTree/: Two-handed_sword.md  Two_Handed_Sword.drawio
doc/System/: Exception-mechanism.md  bitmask_autotile.md  tileset-format.md
doc/Weapon/: Attribute-of-Weapon
src/: conf.lua  config.lua  main.lua
src/assets/: tileset.lua  tileset_info.lua
src/components/: ability.lua  actor.lua  buffs.lua  effect_tile.lua  equipment.lua  health.lua  inventory.lua  inventory_item.lua  player.lua  position.lua  position_tween.lua  renderable.lua  solid.lua  stats.lua  weapon.lua
src/core/: coordinates.lua  ecs.lua  events.lua  rule_engine.lua
src/ecs/: component.lua  system.lua
src/systems/: ai.lua  combat.lua  input.lua  inventory_system.lua  inventory_ui.lua  map_renderer.lua  movement.lua  render.lua  turn.lua  tween_system.lua  (+1 more)
temp/: fbm.lua  godot-tileset-editor-code.md  godot-tileset-properties.md  perlin.lua  poisson_disk.lua  worley.lua
tests/: test_component.lua  test_ecs.lua  test_events.lua  test_prototype.lua  test_system.lua
tools/: generate_tileset.py  tile-test.md  tile.py  tile_lua_parser.py  tile_model.py
tools/editor/: AGENTS.md  CMakeLists.txt  PLAN.md
tools/editor/include/: atlas_view.hpp  editor_state.hpp  texture_loader.hpp  tileset.hpp
tools/editor/src/: atlas_view.cpp  main.cpp  texture_loader.cpp
tools/editor/tests/: test_data_model.cpp
(+30 files in other folders)
